# tco-stopinfo-api

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
deploy/: nginx-vilnius-stjernberg-http.conf.example  nginx-vilnius-stjernberg.conf.example  nginx.conf.example  tco-stopinfo-api.service
docs/: deployment.md  mqtt-pis-mapping.md  mqtt-pis-pt-specification.md  mqtt-topic-layout.md  service-architecture.md  tco-stopinfo-api-spec.md
src/tco_stopinfo/: __init__.py  __main__.py  app.py  builder.py  config.py  journey_context.py  mqtt_client.py  mqtt_snapshot.py  mqtt_thread_client.py  store.py  time_format.py
tests/: test_app_performance.py  test_builder.py  test_mqtt_topics.py  test_time_format.py
